<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constLO"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/crv"
            style="@style/parent"
            app:flow_verticalAlign="center"
            android:background="@color/white"
            app:cardCornerRadius="14dp"
            app:cardElevation="10dp"
            android:layout_marginVertical="160dp"
            android:layout_marginHorizontal="30dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center_horizontal"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/log_user"
                    style="@style/Edittext"
                    android:hint="@string/username"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/log_pass"
                    style="@style/Edittext"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:background="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:layout_gravity="center_horizontal"
                    style="@style/Button"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:id="@+id/login"
                    >
                </Button>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/ls_bottom"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/Signup_bottom"
                    android:textColor="@color/blue">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
